--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <div class="container">
+  <!-- <div class="container">
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
+  </div> -->
+  <!-- <div class="circle">
+    <div class="b"></div>
+  </div> -->
+  <div class="img">
+    <img src="https://cdn.discordapp.com/attachments/1089123119668658206/1117703545387483247/tai_xuong.jpg?fbclid=IwAR1kjCxdT6ordX8Pg_M-jP73yIxjS2vU_fpoRrDBFm5_8cEZYFDXVPCM-6c" alt="Hehe">
   </div>
 </body>
 </html>
